Bug 1103344 - Object.assign should stop when an exception is thrown. r=till